<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#F5F5F5"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#6495ED">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/friends"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/imageView14"
            android:layout_toRightOf="@+id/imageView14"
            android:text="@string/friends"
            android:textColor="#fff"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/image_friends_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/friends_add"
            android:visibility="gone"/>

        <!--<ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/image_friends_add"
            android:layout_toStartOf="@+id/image_friends_add"
            android:background="@drawable/search"/>-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/friends_address_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fff">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/friends_address_list"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/friends_address_list"
                android:textColor="#696969"
                android:textSize="18sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="65dp"
            android:background="#F5F5F5"/>

        <LinearLayout
            android:id="@+id/friends_my_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F8F8FF">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/friends_my_group"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/friends_my_group"
                android:textColor="#696969"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--<ListView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->

    <LinearLayout
        android:id="@+id/friends_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:background="#F8F8FF">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/friends_create_group"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/friends_create_group"
            android:textColor="#696969"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>